--- a/sass/style.sass
+++ b/sass/style.sass
@@ -49,7 +49,7 @@ body
   z-index: 1
 
 html, body
-  overflow-x: hidden  
+  overflow-x: hidden
 
 .grain
   width: 100%
@@ -239,7 +239,6 @@ h1
     background-size: 100%
     width: 151px
     height: 221px
-        
 
 .h1-subtitle
   font-family: $font
@@ -248,7 +247,7 @@ h1
   line-height: 1
   margin: 0 auto
   position: relative
-  width: 100%  
+  width: 100%
   color: $blue
   text-transform: lowercase
 
@@ -319,7 +318,7 @@ h4
   margin-bottom: 20px
 
 .mb-40
-  margin-bottom: 40px  
+  margin-bottom: 40px
 
 .m-100
   margin: 100px 0
@@ -340,9 +339,7 @@ h4
   align-items: stretch
 
 .d-tablet
-  display: none  
-
-  
+  display: none
 
 .panel_heading
   width: 100%
@@ -395,7 +392,8 @@ h4
   margin: 0 0 60px
   h2
     width: fit-content
-    margin: 0 auto 0 0   
+    margin: 0 auto 0 0
+    text-align: left
 
 // slick slider
 .slick-slider
@@ -413,12 +411,13 @@ h4
   border: none
   border-radius: 0
   transition: .3s ease
+  max-width: 135px
   &.slick-disabled
     opacity: 0
 
 .slick-prev
   img
-    transform: scale(-1,1)  
+    transform: scale(-1,1)
 
 .slider-nav
   display: flex
