--- a/css/style.css
+++ b/css/style.css
@@ -463,6 +463,7 @@ h4 {
   width: -moz-fit-content;
   width: fit-content;
   margin: 0 auto 0 0;
+  text-align: left;
 }
 
 .slick-slider {
@@ -484,6 +485,7 @@ h4 {
   border: none;
   border-radius: 0;
   transition: 0.3s ease;
+  max-width: 135px;
 }
 .slick-arrow.slick-disabled {
   opacity: 0;
