--- a/sass/media.sass
+++ b/sass/media.sass
@@ -1,6 +1,17 @@
 /*==========  Desktop First  ==========*/
 
 /* Large Devices, Wide Screens */
+@media only screen and (max-width: 1900px)
+  .what-awaits__content
+    margin: 0
+
+  .what-awaits
+    h2
+      text-align: left
+
+  .price
+    font-size: 70px
+
 @media only screen and (max-width: 1600px)
   body
     font-size: 22px
@@ -35,6 +46,9 @@
     font-size: 70px
     line-height: 1
 
+  h4
+    font-size: 37px
+
   .h1-subtitle
     font-size: 90px
 
@@ -63,7 +77,63 @@
     h3
       font-size: 70px
 
+  .what-awaits__content
+    max-width: 700px
+
+  .what-awaits-box__number
+    min-width: 60px
+
+  .title-wrapper
+    margin: 0 0 60px
+
+  .tabs__caption li
+    font-size: 40px
+
+  .tabs__caption li .item-click-text
+    font-size: 20px
+
+  .program-card .box-text
+    font-size: 30px
+
+  .advantages-box
+    padding: 35px 30px
+
+  .advantages-box-bg
+    padding: 0
+
+  .reviews-content
+    padding: 40px 0
+
+  .reviews-card
+    width: 700px
+
+  .reviews-slider
+    padding-left: 265px
+
+  .bonuses-card
+    max-width: 500px
+    .box-text
+      max-width: 358px
+
+  .panel_heading .block_title:after
+    width: 60px
+    height: 60px
+    min-width: 60px
+
+  .chance
+    h2
+      max-width: 1000px
+
+  .price-card3 .price-card__head h3
+    font-size: 120px
+
+  .price-card .price
+    margin: 60px 0 0
+
 @media only screen and (max-width: 1300px)
+  body
+    font-size: 20px
+
   .main
     padding: 0 0 50px
     .subtitle
@@ -104,6 +174,10 @@
     height: 57px
     font-size: 14px
     border-radius: 15px
+    .svg-icon
+      width: 20px
+      min-width: 20px
+      margin: 0 10px 0 0
 
   h1
     font-size: 119px
@@ -120,18 +194,21 @@
     font-size: 50px
 
   h4
-    font-size: 35px
+    font-size: 30px
 
   .h1-subtitle
     font-size: 44px
 
+  .main
+    .subtitle
+      &::before
+        width: 8px
+        height: 7px
+        min-width: 8px
+        margin: 0 5px 0 0
+
   .subtitle
-    font-size: 14px
-    &::before
-      width: 8px
-      height: 7px
-      min-width: 8px
-      margin: 0 5px 0 0
+    font-size: 18px
 
   .d-tablet
     display: flex
@@ -193,7 +270,155 @@
     h3
       font-size: 70px
 
+  .what-awaits-box
+    font-size: 26px
+    padding: 40px 0
+    &__number
+      min-width: 35px
+
+  .what-awaits
+    &__content
+      max-width: 620px
+
+  .what-awaits__img
+    max-width: 320px
+
+  .expert
+    margin: 150px 0 100px
+
+  .expert-photo
+    max-width: 250px
+    margin: -110px auto 55px
+
+  .expert-content .box-text
+    max-width: 700px
+
+  .title-wrapper
+    margin: 0 0 50px
+
+  .intensive-give-card
+    min-height: 800px
+    width: 600px
+    padding: 40px
+    border-radius: 50px
+    font-size: 28px
+    &__content
+      padding: 30px
+      border-radius: 30px
+
+  .tabs__caption li
+    font-size: 30px
+
+  .tabs__caption li .item-click-text
+    font-size: 16px
+    img
+      width: 25px
+      min-width: 25px
+      margin: 0 10px 0 0
+
+  .advantages-box
+    padding: 25px 20px
+    border-radius: 30px
+    &-bg
+      padding: 0
+    h4
+      margin: 20px 0 10px
+
+  .why-sign-card
+    padding: 35px
+    border-radius: 35px
+    &__icon
+      margin: 0 0 70px
+      height: 25px
+    h5
+      font-size: 30px
+
+  .reviews-card
+    width: 500px
+
+  .bonuses-card
+    max-width: 300px
+    border-radius: 30px
+    padding: 30px 10px 30px
+    font-size: 16px
+    box-shadow: -5px 5px 0px 0px #94a3b2
+    border-width: 1px
+    margin: 0 10px 0 0
+    &__img
+      max-width: 188px
+      margin: 0 auto 30px
+    .box-text
+      margin: 10px auto 0
+    &:last-child
+      padding: 20px 5px 0
+      box-shadow: 5px -5px 0px 0px #0d284c
+      margin: 5px 0 0
+      .box-text
+        max-width: 300px
+      .bonuses-card
+        &__img
+          max-width: 277px
+
+  .panel_heading
+    padding: 40px 30px
+    border-radius: 40px
+
+  .panel_heading .block_hover
+    font-size: 28px
+
+  .price-card
+    &__head
+      min-height: 250px
+      padding: 10px
+      border-radius: 25px
+      border-width: 1px
+    &__body
+      border-radius: 25px
+      border-width: 1px
+    .box-text
+      margin: 0 0 20px
+    .price
+      margin: 22px 0 0
+
+  .price
+    font-size: 50px
+
+  footer
+    padding: 40px 0
+    &::before
+      width: 300px
+      height: 300px
+    .box-text
+      p
+        margin: 0 0 20px
+        &:last-child
+          margin: 0
+    .logo
+      margin: 0 0 20px
+      font-size: 22px
+
+  .list-social
+    margin: 0 0 20px
+
+  .list-social li a
+    width: 45px
+    height: 45px
+    min-width: 45px
+    padding: 12px
+
+  .footer-box
+    font-size: 20px
+
+  .link-document
+    margin: 0 0 20px auto
+
+  .copyright
+    margin: 20px 0 0
+
 @media only screen and (max-width: 992px)
+  body
+    font-size: 18px
+
   .container
     padding: 0 20px
 
@@ -201,6 +426,9 @@
     margin: 0 -10px
 
   .col-50
+    padding: 0 7px
+
+  .col-30
     padding: 0 7px
 
   .mb-20
@@ -225,6 +453,9 @@
   h1
     &::before
       left: 72px
+
+  .subtitle
+    font-size: 14px
 
   .main-content
     max-width: 250px
@@ -255,7 +486,7 @@
     font-size: 30px
 
   h4
-    font-size: 30px
+    font-size: 25px
     line-height: 1
 
   .m-100
@@ -263,7 +494,7 @@
 
   .title-decor
     margin: 0 auto 15px
-    padding: 0 0 20px
+    padding: 0 0 30px
     &::before
       width: 55px
       height: 10px
@@ -295,7 +526,94 @@
     margin: 60px 0 0
 
   .days-icon
-    max-width: 120px  
+    max-width: 120px
+
+  .what-awaits__content
+    max-width: 500px
+
+  .what-awaits-box
+    padding: 25px 0
+    font-size: 16px
+    &__number
+      font-size: 30px
+      line-height: 1
+    h4
+      font-size: 22px
+
+  .what-awaits__img
+    max-width: 230px
+
+  .slick-arrow
+    max-width: 80px
+
+  .tabs__caption
+    margin: 0 -5px
+    li
+      height: 40px
+      border-radius: 10px
+      font-size: 18px
+      padding: 0 5px
+      margin: 0 0 10px
+      span
+        padding: 10px
+        border-radius: 10px
+
+      .item-click-text
+        font-size: 14px
+
+  .program-card
+    min-height: 500px
+    .box-text
+      font-size: 22px
+    &__bg
+      max-width: 250px
+
+  .reviews-slider
+    padding-left: 200px
+
+  .reviews-card
+    width: 500px
+    border-radius: 25px
+    padding: 30px
+    .box-text
+      margin: 75px 0 0
+
+  .panel_heading .block_hover
+    font-size: 22px
+    padding: 15px 0 0
+    .box-text
+      max-width: 600px
+
+  .chance-content
+    border-radius: 40px
+    padding: 40px
+    .box-text
+      max-width: 700px
+      font-size: 28px
+
+  .price-card
+    &__head
+      min-height: 170px
+    &__body
+      padding: 15px 20px
+    &__footer
+      margin: 10px auto 0
+
+  .price-card3
+    .price-card__head
+      h3
+        font-size: 66px
+
+  .list-check li
+    margin: 0 0 10px
+    &::before
+      width: 12px
+      height: 12px
+      min-width: 12px
+      margin: 5px 8px 0 0
+
+  .price
+    font-size: 30px
 
 @media only screen and (max-width: 768px)
   body
@@ -321,6 +639,7 @@
 
   h2
     font-size: 44px
+    margin: 0 auto 20px
 
   h4
     font-size: 22px
@@ -332,6 +651,7 @@
   .reasons-box
     height: 175px
     font-size: 10px
+    border-width: 1px
     &__number
       font-size: 40px
 
@@ -375,6 +695,7 @@
     border-radius: 20px
     padding: 15px 10px 90px
     margin: 20px 0
+    width: calc( 33.33% - 5px )
     &:nth-child(2)
       margin: 0 0 20px
     h3
@@ -391,7 +712,203 @@
   .days-icon
     max-width: 60px
 
+  .what-awaits__content
+    max-width: 405px
+
+  .what-awaits-box
+    padding: 25px 0
+    border-width: 1px
+    font-size: 16px
+    h4
+      font-size: 22px
+    &__number
+      font-size: 22px
+      min-width: 25px
+    &__text
+      padding: 0 0 0 10px
+
+  .expert-photo
+    max-width: 140px
+    margin: -75px auto 20px
+
+  .expert-content
+    border-radius: 30px
+    padding: 0 20px 30px
+    .box-text
+      max-width: 400px
+
+  .title-wrapper
+    margin: 0 0 20px
+
+  .intensive-give-card
+    width: 360px
+    min-height: 400px
+    padding: 30px
+    border-radius: 30px
+    font-size: 13px
+    h4
+      font-size: 14px
+      margin: 0 0 5px
+    &__content
+      border-radius: 20px
+      padding: 20px 15px
+    .subtitle
+      margin: 0 0 20px
+
+  .intensive-give-slider .slick-slide
+    margin: 0 10px 0 0
+
+  .tabs__caption li .item-click-text
+    font-size: 12px
+    line-height: 1
+    img
+      width: 14px
+      min-width: 14px
+      margin-right: 5px
+
+  .program-card
+    min-height: 240px
+    border-width: 1.2px
+    padding: 20px 10px 50px
+    h4
+      margin: 0 auto 5px
+    .box-text
+      font-size: 13px
+    &__bg
+      max-width: 187px
+      bottom: 15px
+    &:first-child
+      margin-right: -1px
+      border-radius: 20px 0 0 20px
+    &:nth-child(2)
+      padding-bottom: 120px
+    &:last-child
+      margin-left: -1px
+      border-radius: 0 20px 20px 0
+    &__icon
+      max-width: 50px
+      margin: 0 auto 10px
+
+  .advantages-box
+    font-size: 12px
+    border-radius: 25px
+    padding: 20px
+    min-height: 200px
+    &__icon
+      img
+        max-width: 58px
+    h4
+      font-size: 18px
+    &-bg
+      padding: 0
+
+  .why-sign-card
+    border-radius: 30px
+    padding: 20px
+    border-width: 1px
+    &__icon
+      margin: 0 0 50px
+    h5
+      font-size: 16px
+      margin: 0 0 10px
+
+  .reviews-slider
+    padding-left: 165px
+
+  .reviews-content
+    border-radius: 30px
+
+  .reviews-card
+    padding: 20px
+    width: 400px
+    font-size: 14px
+
+  .panel_heading
+    border-radius: 20px
+    padding: 20px
+    margin: 0 0 10px
+    &:last-child
+      margin: 0
+    .block_title
+      &::after
+        width: 35px
+        height: 35px
+        min-width: 35px
+        border-radius: 6px
+        background-size: 15px
+    .block_hover
+      font-size: 16px
+      max-width: 450px
+
+  .chance-content
+    border-radius: 30px
+    padding: 40px 20px
+    .box-text
+      max-width: 567px
+      font-size: 16px
+
+  .chance
+    h2
+      max-width: 605px
+
+  .price-card
+    &__head
+      min-height: 120px
+      margin: 0 0 10px
+      .subtext
+        margin: 0 auto 10px
+    &__body
+      line-height: normal
+      font-size: 12px
+    h4
+      margin: 0 0 10px
+
+  .price
+    font-size: 35px
+
+  .callback
+    margin: 0
+
+  .btn-group .btn
+    width: 100%
+    margin: 0 auto 10px
+    &:last-child
+      margin: 0 auto
+
+  .list-social li
+    margin: 0 5px 0 0
+    a
+      border-radius: 6px
+      width: 30px
+      height: 30px
+      min-width: 30px
+      padding: 8px
+
+  footer
+    &::before
+      width: 203px
+      height: 203px
+      bottom: -45px
+    .logo
+      font-size: 12px
+    .box-text
+      p
+        margin: 0 0 15px
+        &:last-child
+          margin: 0
+
+  .footer-box
+    font-size: 10px
+
+  .link-document
+    margin: 0 0 15px auto
+
 @media only screen and (max-width: 576px)
+  h2
+    font-size: 30px
+
+  .title-wrapper
+    margin: 0 0 15px
 
 @media only screen and (max-width: 480px)
 
