--- a/sass/header.sass
+++ b/sass/header.sass
@@ -55,4 +55,9 @@ header
   margin: 0 auto
   img
     margin: 0 13px 0 0
+
+.logo-text
+  span
+    font-family: $default-font    
+    font-weight: 300
     
