--- a/sass/style.sass
+++ b/sass/style.sass
@@ -338,7 +338,7 @@ h4
   display: flex
   align-items: stretch
 
-.d-tablet
+.d-tablet, .d-mobile
   display: none
 
 .panel_heading
@@ -378,7 +378,7 @@ h4
     display: none
     padding: 40px 0 0
     .box-text
-      max-width: 1075px
+      max-width: 1075px 
 
 .tabs__content
   display: none
