--- a/sass/style.sass
+++ b/sass/style.sass
@@ -48,8 +48,8 @@ body
   color: $black
   z-index: 1
 
-html, body
-  overflow-x: hidden
+// html, body
+//   overflow-x: hidden
 
 .grain
   width: 100%
